cfn.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  CloudFormation Template for Roman Numerals Converter Application. 
  This template creates Python Flask Web Application on Amazon Linux 2023  
  EC2 Instance with custom security group allowing http connections on port 
  80 , 8080 and SSH connection on port 22. Roman Numerals Converter Application 
  is downloaded from Github repository, then installed on Flask.

Parameters:
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'
  KeyOptions:
    Description: Choose your key pair for connecting to instance.
    Type: AWS::EC2::KeyPair::KeyName
    Default: firstkey  
Resources:
  MyWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: t2.micro
      KeyName: !Ref KeyOptions
      SecurityGroupIds: 
        - !Ref MySecGrp
      Tags: 
        - Key: Name
          Value: !Sub Web Server Of ${AWS::StackName} Stack
      UserData: !Base64 |
        #!/bin/bash
        dnf update -y
        dnf install python3 -y
        dnf install python3-pip -y
        pip3 install flask
        dnf install git -y
        cd /home/ec2-user
        wget -P templates https://raw.githubusercontent.com/OmerCanKarli/AWS-CloudFormation-Project-02/main/templates/index.html
        wget -P templates https://raw.githubusercontent.com/OmerCanKarli/AWS-CloudFormation-Project-02/main/templates/result.html
        wget https://raw.githubusercontent.com/OmerCanKarli/AWS-CloudFormation-Project-02/main/app.py
        python3 app.py 
  MySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: This security group enables port 22, 80 and port 8080. # Required
      GroupName: RomenNumSg
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 22 
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80 
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080 
          ToPort: 8080
          CidrIp: 0.0.0.0/0                    
      Tags: 
        - Key: Name
          Value: RomenNumSecGrp
Outputs:
  MyOutput:
    Description: Roman Numerals Converter Application URL
    Value: !Sub
      - http://${PublicDNS}
      - PublicDNS: !GetAtt MyWebServer.PublicDnsName
